Initial Jekyll version

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,30 @@
-theme: jekyll-theme-cayman
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+author: Dmitry Rogozhny
+title: Dmitry Rogozhny
+email: dmitry@dmitryrogozhny.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: https://dmitryrogozhny.com
+twitter_username: dro_stories
+github_username:  dmitryrogozhny
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+
+# Posts settings
+permalink: /blog/:title
+# paginate: 2
+
+# Build settings
+markdown: kramdown
+theme: minima
+gems:
+  - jekyll-feed
+  - jekyll-sitemap
+exclude:
+  - Gemfile
+  - Gemfile.lock
