--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 google_analytics: UA-100633158-1
+disqus:
+  shortname: dmitryrogozhny
 
 # Posts settings
 permalink: /blog/:title
