--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ theme: minima
 gems:
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-seo-tag
+  # - jekyll-seo-tag
 exclude:
   - Gemfile
   - Gemfile.lock
