Disable menu items for unfilled sections

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,9 +1,9 @@
 - title: Blog
   url: /blog/
 
-- title: Projects
-  url: /projects/
-  disabled: true
+# - title: Projects
+#   url: /projects/
+#   disabled: true
 
-- title: Contact
-  url: /about/
+# - title: Contact
+#   url: /about/
