Rollback the fix as the GitHub Pages keep failing

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ permalink: /blog/:title
 markdown: kramdown
 theme: minima
 
-excerpt_separator: "<!--more-->"
+# excerpt_separator: "<!--more-->"
 
 sass:
     style: compressed
