Add nbsp for name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-author: Dmitry Rogozhny
+author: Dmitry&nbsp;Rogozhny
 title: Dmitry Rogozhny
 email: drogozhny@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
