Add a link to youtube in the footer

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: https://dmitryrogozhny.com
 twitter_username: dro_stories
 github_username:  dmitryrogozhny
 linkedin_username: drogozhny
+youtube_channelid: UC1JQErr-jehpm45HWLNkhvw
 description: >
   Software Development described
 
