--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-author: Dmitry&nbsp;Rogozhny
+author: Dmitry Rogozhny
 title: Dmitry Rogozhny
 email: drogozhny@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -8,8 +8,9 @@ twitter_username: dro_stories
 github_username:  dmitryrogozhny
 linkedin_username: drogozhny
 youtube_channelid: UC1JQErr-jehpm45HWLNkhvw
+
 description: >
-  Software Development described
+  Development, Architecture, and Consulting
 
 google_analytics: UA-100633158-1
 disqus:
