Add alternative spelling

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-author: Dmitry Rogozhny
-title: Dmitry Rogozhny
+author: Dmitry Rogozhny (Dzmitry Rahozhny)
+title: Dmitry Rogozhny (Dzmitry Rahozhny)
 email: drogozhny@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://dmitryrogozhny.com
