--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-author: Dmitry Rogozhny (Dzmitry Rahozhny)
-title: Dmitry Rogozhny (Dzmitry Rahozhny)
+author: Dzmitry Rahozhny (Dmitry Rogozhny)
+title: Dzmitry Rahozhny (Dmitry Rogozhny)
 email: drogozhny@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://dmitryrogozhny.com
